(FEAT: incluido a main)

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="./styles/output.css" rel="stylesheet" />
     <title>UniwersoTech Sobremesas</title>
   </head>
@@ -44,10 +51,208 @@
       </div>
     </header>
     <h2 class="text-2xl md:text-3xl font-bold text-center mt-9 mb-6">
-      Conheça nossos Sorvetes
+      Conheça nossas Sobremesas
     </h2>
     <div id="menu">
-      <main class=""></main>
+      <main
+        class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
+      >
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Sundae-Especial.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Sundae Especial</p>
+            <p class="text-sm">
+              Sorvete de creme com calda de chocolate, chantilly e amendoim.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 18,90</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Sundae Especial"
+                data-price="18.90"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Milk-Shake-Supremo.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Milk Shake Supremo</p>
+            <p class="text-sm">
+              Milk shake de chocolate com chantilly, calda e cerejas.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 22,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Milk Shake Supremo"
+                data-price="22,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Casquinha-dupla.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Casquinha Dupla</p>
+            <p class="text-sm">
+              Casquinha com dois sabores à sua escolha e cobertura.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 15,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Casquinha Dupla"
+                data-price="15,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Acai-Especial.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Açaí Especial</p>
+            <p class="text-sm">
+              Açaí cremoso com granola, banana, leite condensado e paçoca.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 25,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Açaí Especial"
+                data-price="25,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Tentacao-Caramelada.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Tentação Caramelada</p>
+            <p class="text-sm">
+              Pudim de leite tradicional com uma generosa camada de caramelo
+              crocante, servido com um toque de canela em pó.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 25,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Tentação Caramelada"
+                data-price="25,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Vulcao-de-Chocolate.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Vulcão de Chocolate</p>
+            <p class="text-sm">
+              Brownie quentinho com um centro cremoso de ganache derretida,
+              servido com uma bola de sorvete de baunilha.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 30,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Vulcão de Chocolate"
+                data-price="30,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Aconchego-de-Banana.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Aconchego de Banana</p>
+            <p class="text-sm">
+              Banana flambada no rum ou licor, servida sobre uma fatia de bolo e
+              coberta com uma bola de sorvete de creme.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 20,00</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Aconchego de Banana"
+                data-price="20,00"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Sinfonia-de-Frutas.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Sinfonia de Frutas</p>
+            <p class="text-sm">
+              Salada de frutas frescas regada com calda de iogurte grego adoçado
+              e um toque de hortelã.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 23,50</p>
+              <button
+                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                data-name="Sinfonia de Frutas"
+                data-price="23,50"
+              >
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
