(STYLE: melhoria no botao de adicionar no carrinho)

--- a/src/index.html
+++ b/src/index.html
@@ -71,11 +71,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 18,90</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Sundae Especial"
                 data-price="18.90"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -95,11 +96,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 22,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Milk Shake Supremo"
                 data-price="22,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -119,11 +121,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 15,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Casquinha Dupla"
                 data-price="15,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -143,11 +146,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 25,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Açaí Especial"
                 data-price="25,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -168,11 +172,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 25,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Tentação Caramelada"
                 data-price="25,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -193,11 +198,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 30,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Vulcão de Chocolate"
                 data-price="30,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -218,11 +224,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 20,00</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Aconchego de Banana"
                 data-price="20,00"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
@@ -243,11 +250,12 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 23,50</p>
               <button
-                class="bg-[#f95c99] px-5 rounded add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
                 data-name="Sinfonia de Frutas"
                 data-price="23,50"
               >
-                <i class="fa fa-cart-plus text-lg text-[#d7f1f2]"> </i>
+                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                </i>
               </button>
             </div>
           </div>
