(STYLE: melhria nos botoes para adicionar no carrinho)

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,9 @@
                 data-name="Sundae Especial"
                 data-price="18.90"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -100,7 +102,9 @@
                 data-name="Milk Shake Supremo"
                 data-price="22,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -125,7 +129,9 @@
                 data-name="Casquinha Dupla"
                 data-price="15,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -150,7 +156,9 @@
                 data-name="Açaí Especial"
                 data-price="25,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -176,7 +184,9 @@
                 data-name="Tentação Caramelada"
                 data-price="25,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -202,7 +212,9 @@
                 data-name="Vulcão de Chocolate"
                 data-price="30,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -228,7 +240,9 @@
                 data-name="Aconchego de Banana"
                 data-price="20,00"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
@@ -254,7 +268,9 @@
                 data-name="Sinfonia de Frutas"
                 data-price="23,50"
               >
-                <i class="fa-solid fa-cart-shopping text-xl text-[#d7f1f2]">
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
