--- a/src/index.html
+++ b/src/index.html
@@ -277,6 +277,121 @@
           </div>
         </div>
       </main>
+      <div class="text-center mx-auto max-w-7xl px-2 my-2">
+        <h2 class="text-2xl md:text-3xl font-bold mt-9 mb-6">Bebidas</h2>
+      </div>
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 gap-7 md-gap-10 mx-auto max-w-7xl px-2 mb-16"
+        id="menu"
+      >
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Suco-Natural.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Suco Natural</p>
+            <p class="text-sm">Diversos sabores de frutas frescas.</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 8,00</p>
+              <button
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                data-name="Suco Natural"
+                data-price="8.00"
+              >
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
+                </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Bebida-de-Coco-Refrescante.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Bebida de Coco Refrescante</p>
+            <p class="text-sm">
+              Água de coco natural ou leite de coco batido com gelo e um toque
+              de mel ou frutas tropicais.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 11,00</p>
+              <button
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                data-name="Bebida de Coco Refrescante"
+                data-price="11.00"
+              >
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
+                </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Coca-lata.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Coca lata</p>
+            <p class="text-sm">
+              Coca-Cola Clássica · Coca-Cola Zero · Coca-Cola Light.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 6,00</p>
+              <button
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                data-name="Bebida de Coco Refrescante"
+                data-price="11.00"
+              >
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
+                </i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="flex gap-2">
+          <img
+            src="/src/assets/img/Limonada-Mágica.png"
+            alt="Sundae Especial"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+          <div class="w-full flex flex-col justify-around">
+            <p class="font-bold">Limonada Mágica</p>
+            <p class="text-sm">
+              Limonada artesanal com toques especiais, como gengibre ralado,
+              folhas de hortelã ou frutas vermelhas.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 9,00</p>
+              <button
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                data-name="Limonada Mágica"
+                data-price="9.00"
+              >
+                <i
+                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
+                >
+                </i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
