(FEAT:inclusao do footer onde vai ficar o carrinho ao ser clicavel)

--- a/src/index.html
+++ b/src/index.html
@@ -393,5 +393,32 @@
         </div>
       </div>
     </div>
+
+    <div>
+      <div>
+        <h2>Meu carrinho</h2>
+        <div></div>
+        <p>Total: <span> R$ 0.00</span></p>
+        <p>Endereço de entrega:</p>
+        <input type="text" placeholder="Digite seu endereco completo" />
+        <p>Digite seu endereço completo</p>
+        <div>
+          <button>Fechar</button>
+          <button>Finalizar Pedido</button>
+        </div>
+      </div>
+    </div>
+
+    <footer
+      class="bg-[#f95c99] w-full py-3 fixed bottom-0 z-40 flex items-center justify-center"
+    >
+      <button
+        class="flex items-center gap-2 text-white font-bold"
+        id="cart-btn"
+      >
+        <i class="fa-solid fa-cart-plus text-lg text-white"> </i>
+        Meu carrinho - [<span id="cart-count"> 0 </span>]
+      </button>
+    </footer>
   </body>
 </html>
