(FEAT:script.js): inclusao do script e inclusao da open e close do modal carrinho

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./styles/output.css" />
+    <link rel="stylesheet" href="./src/styles/output.css" />
 
     <title>UniwersoTech Sobremesas</title>
   </head>
@@ -34,7 +34,7 @@
     <header class="w-full h-[420px] bg-header bg-cover bg-center bg-no-repeat">
       <div class="w-full h-full flex flex-col justify-center items-center">
         <img
-          src="./assets/img/logo.png"
+          src="./src/assets/img/logo.png"
           alt="Logo"
           class="w-32 h-32 rounded-full border-4 hover:-rotate-2 duration-300"
         />
@@ -464,5 +464,6 @@
         >
       </button>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
