(STYLE: index.html):mudanca nos icones de adcionar ao carrinho

--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
                 data-name="Sundae Especial"
                 data-price="18.90"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -115,9 +113,7 @@
                 data-name="Milk Shake Supremo"
                 data-price="22,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -142,9 +138,7 @@
                 data-name="Casquinha Dupla"
                 data-price="15,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -169,9 +163,7 @@
                 data-name="Açaí Especial"
                 data-price="25,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -197,9 +189,7 @@
                 data-name="Tentação Caramelada"
                 data-price="25,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -225,9 +215,7 @@
                 data-name="Vulcão de Chocolate"
                 data-price="30,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -253,9 +241,7 @@
                 data-name="Aconchego de Banana"
                 data-price="20,00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -281,9 +267,7 @@
                 data-name="Sinfonia de Frutas"
                 data-price="23,50"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -318,9 +302,7 @@
                 data-name="Suco Natural"
                 data-price="8.00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -346,9 +328,7 @@
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -373,9 +353,7 @@
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -401,9 +379,7 @@
                 data-name="Limonada Mágica"
                 data-price="9.00"
               >
-                <i
-                  class="fa-solid fa-cart-shopping text-[#d7f1f2] cursor-pointer"
-                >
+                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -455,7 +431,7 @@
         class="flex items-center gap-2 text-white font-bold text-base hover:scale-105 transition-all duration-300 bg-white/10 px-3 py-1.5 rounded-full hover:bg-white/20"
         id="cart-btn"
       >
-        <i class="fa-solid fa-cart-plus text-lg text-white"></i>
+        <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
         <span>Meu carrinho</span>
         <span
           class="bg-white text-[#f95c99] px-2 py-0.5 rounded-full font-bold text-sm shadow-sm"
