--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
       id="cart-modal"
     >
       <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
-        <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
+        <h2 class="text-center font-bold text-2xl mb-4">Meu carrinho</h2>
 
         <div
           id="cart-itens"
-          class="flex justify-between mb-2 flex-col max-h-[400px] overflow-auto"
+          class="flex flex-col divide-y divide-gray-200 max-h-[400px] overflow-y-auto"
         ></div>
 
-        <p class="font-bold">Total: <span id="cart-total">0.00</span></p>
+        <p class="font-bold mt-4">Total: <span id="cart-total">0.00</span></p>
 
         <p class="font-bold mt-4">Endereço de entrega:</p>
 
