--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
           <p class="text-white font-medium">Rua 10 de Janeiro, Ubajara - CE</p>
         </div>
 
-        <span
-          class="text-white font-medium flex items-center gap-2 bg-green-600 px-4 py-1 rounded-full mt-5"
+        <div
+          class="flex flex-col text-center gap-2 bg-green-600 px-4 py-1 rounded-full mt-5"
           id="date-span"
         >
-          <i class="fa-solid fa-clock" style="color: #ffffff"></i>
-          Segunda a Domingo - 18h as 22h
-        </span>
+          <span class="text-white font-medium py-1">
+            <i class="fa-solid fa-clock" style="color: #ffffff"></i>
+            Segunda a Domingo - 18h as 22h
+          </span>
+        </div>
       </div>
     </header>
 
