--- a/index.html
+++ b/index.html
@@ -445,6 +445,10 @@
         >
       </button>
     </footer>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/toastify-js"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
