(FEAT:index.html): add meta tag og

--- a/index.html
+++ b/index.html
@@ -25,6 +25,23 @@
       referrerpolicy="no-referrer"
     />
 
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="UniwersoTech Sobremesas - As mais saborosas sobremesas estao aqui!"
+    />
+    <meta
+      property="og:image"
+      content="hhttps://menu-sobremesa.vercel.app/src/assets/img/logo.png"
+    />
+    <meta
+      property="og:description"
+      content="Experimente nossas delicias, preparadas com ingredientes frescos e muito
+    carinho."
+    />
+    <meta property="og:site_name" content="UniwersoTech Sobremesas" />
+    <link rel="stylesheet" href="./styles/output.css" />
+
     <link rel="stylesheet" href="./src/styles/output.css" />
 
     <title>UniwersoTech Sobremesas</title>
